--- a/MarsFramework/MarsFramework.csproj
+++ b/MarsFramework/MarsFramework.csproj
@@ -51,4 +51,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestReports\Screenshots\" />
+  </ItemGroup>
+
 </Project>
